Add Disqus comments

--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ defaults:
     values:
       layout: "post"
       author: "Jay Pinho"
+      comments: true
 
 # Build settings
 markdown: kramdown
