--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   data.tech.media.politics.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://blog.jaypinho.com" # the base hostname & protocol for your site
-permalink: /:year/:month/:day/:title.html
+permalink: /:year/:month/:day/:title/
 twitter_username: jaypinho
 github_username:  jaypinho
 timezone: America/New_York
