Add publications and events

--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -1,3 +1,15 @@
+- title: "The Memory Police – Yoko Ogawa"
+  publisher: Full Stop
+  date: 2019-10-14 09:00:00
+  link: https://www.full-stop.net/2019/10/14/reviews/jay-pinho/the-memory-police-yoko-ogawa/
+  excerpt: "That there should be such ambiguity between perpetrator and victim is, it seems, part of the tragedy of totalitarianism: one can fully escape neither victimhood nor complicity."
+
+- title: Brand safety has evolved, and so should your ad blocking strategy
+  publisher: Oracle Advertising
+  date: 2019-04-25 09:00:00
+  link: https://blogs.oracle.com/advertising/post/brand-safety-has-evolved-and-so-should-your-ad-blocking-strategy
+  excerpt: "At its core, brand safety is a set of measures that protects a brand from appearing in unsafe or unsuitable environments. It continues to be a top priority among brands and publishers, but one of the key challenges is that brand safety is not one-size-fits-all. What is considered \"brand-suitable\" to BuzzFeed may not be considered the same for Clorox, making brand safety a tricky business. While ad verification services have made it easier to protect brands by safeguarding digital ad investments, understanding when to use each service is key to making advertising more accountable and effective."
+
 - title: Trump's campaign is a farcical made-for-TV event
   publisher: Al Jazeera America
   date: 2015-09-16 09:00:00
