Add new blog post

--- a/_data/public-speaking.yaml
+++ b/_data/public-speaking.yaml
@@ -1,3 +1,11 @@
+- title: "How disinformation is harming brand safety and straining ad budgets"
+  host: Oracle Advertising
+  date: 2022-02-10 09:00:00
+  links:
+    - url: https://blogs.oracle.com/advertising/post/how-disinformation-is-harming-brand-safety-and-straining-ad-budgets
+      title: Blog post
+  excerpt: "The negative impact of misinformation is not only eating up ad spend dollars, for thousands - if not millions - of businesses, it is putting their brand reputation at risk and working against brand safety initiatives. To better understand the current crisis of distrust among consumers and how it is impacting brand safety, we talked to our own Jay Pinho, senior manager of product management for Oracle Moat."
+
 - title: "Road to ALM: Brand Suitability: Can We Use a Scalpel Rather Than an Axe?"
   host: IAB
   date: 2022-01-27 09:00:00
