Add 2 Drum articles

--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -1,3 +1,15 @@
+- title: "3 downstream effects of your brand safety decisions"
+  publisher: The Drum
+  date: 2021-05-04 09:00:00
+  link: https://www.thedrum.com/profile/oracle-data-cloud/news/3-downstream-effects-of-your-brand-safety-decisions
+  excerpt: "Brand safety, and its evolution to brand suitability, now commands attention from every level of the organization. From the campaign manager to the chief marketing officer, each position must consider the implications of their choices. We all have a duty to support the health of the industry now and into the future."
+
+- title: "5 ways to think about contextual intelligence for your digital campaigns"
+  publisher: The Drum
+  date: 2021-02-05 09:00:00
+  link: https://www.thedrum.com/profile/oracle-data-cloud/news/5-ways-to-think-about-contextual-intelligence-for-your-digital-campaigns
+  excerpt: "Deciding what is appropriate or not for a brand can be very simple to understand yet challenging to achieve. Being able to successfully find and reach your audience will determine the success of your advertising campaign. Including contextual intelligence in your next campaign can ensure that you’re reaching audiences with relevant content in safe environments."
+
 - title: "The Memory Police – Yoko Ogawa"
   publisher: Full Stop
   date: 2019-10-14 09:00:00
