--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -1,3 +1,9 @@
+- title: "A new approach to brand suitability: It’s time for advertisers to use a scalpel instead of an ax"
+  publisher: Oracle Advertising
+  date: 2022-03-09 09:00:00
+  link: https://blogs.oracle.com/advertising/post/new-approach-brand-suitability
+  excerpt: "Ultimately, there is no one-size-fits-all advertising strategy. When it comes to your brand safety and brand suitability tactics, contextual intelligence is one component of an integrated, layered ad targeting approach. Brands need end-to-end solutions that offer prebid and postbid verification capabilities. They need tools that allow them to reach the right audiences at just the right time without blocking entire ad environments. And once a campaign is in motion, they need to measure and track results to gain insights that will allow them to optimize those campaigns in real-time."
+
 - title: "3 downstream effects of your brand safety decisions"
   publisher: The Drum
   date: 2021-05-04 09:00:00
